# mpasp

./: README.md  pyproject.toml
mpasp/: __init__.py  magic.py
